--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,23 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Command line suite</th></tr>
-<tr><td><a href="#t0">Command line test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52,840</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Command line test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">86,011</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Command line suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Command line test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">dayForceTests.HomePageTests</td><td><a href="#m0">testHamburgerToOpenSideMenu</a></td><td rowspan="1">1732699576658</td><td rowspan="1">149</td></tr><tr class="passedodd"><td rowspan="2">dayForceTests.LoginPageTests</td><td><a href="#m1">testAccountLogin</a></td><td rowspan="1">1732699563838</td><td rowspan="1">5747</td></tr><tr class="passedodd"><td><a href="#m2">testNavigateToHomePage</a></td><td rowspan="1">1732699569609</td><td rowspan="1">7040</td></tr><tr class="passedeven"><td rowspan="1">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</td><td><a href="#m3">testLoadOrganisation</a></td><td rowspan="1">1732699576825</td><td rowspan="1">33665</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Command line suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Command line test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</td><td><a href="#m0">verifyOrganisationTitleMatchesSelectedOrganisation</a></td><td rowspan="1">1732754311228</td><td rowspan="1">50308</td></tr><tr><th colspan="4">Command line test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">dayForceTests.HomePageTests</td><td><a href="#m1">testHamburgerToOpenSideMenu</a></td><td rowspan="1">1732754294648</td><td rowspan="1">2816</td></tr><tr class="passedodd"><td rowspan="2">dayForceTests.LoginPageTests</td><td><a href="#m2">testAccountLogin</a></td><td rowspan="1">1732754281614</td><td rowspan="1">3896</td></tr><tr class="passedodd"><td><a href="#m3">testNavigateToHomePage</a></td><td rowspan="1">1732754285524</td><td rowspan="1">9096</td></tr><tr class="passedeven"><td rowspan="1">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</td><td><a href="#m4">testLoadOrganisation</a></td><td rowspan="1">1732754297533</td><td rowspan="1">13692</td></tr></tbody>
 </table>
-<h2>Command line test</h2><h3 id="m0">dayForceTests.HomePageTests#testHamburgerToOpenSideMenu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">dayForceTests.LoginPageTests#testAccountLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>totallygroupconfig</td><td>Test</td><td>Dayforce2</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">dayForceTests.LoginPageTests#testNavigateToHomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">dayForceTests.timeSchedulesAutomation.TimeScheduleTests#testLoadOrganisation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Command line test</h2><h3 id="m0">dayForceTests.timeSchedulesAutomation.TimeScheduleTests#verifyOrganisationTitleMatchesSelectedOrganisation</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: No available day was selected. expected [true] but found [false]
+	at com.totallygroup.pageObject.TimeSchedulesPage.testSelectAvailableDayForEmployee(TimeSchedulesPage.java:199)
+	at dayForceTests.timeSchedulesAutomation.TimeScheduleTests.verifyOrganisationTitleMatchesSelectedOrganisation(TimeScheduleTests.java:44)
+	at org.springframework.test.context.testng.AbstractTestNGSpringContextTests.run(AbstractTestNGSpringContextTests.java:186)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+	at Runners.TestRunner.runTests(TestRunner.java:43)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:65)
+	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:105)
+... Removed 49 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">dayForceTests.HomePageTests#testHamburgerToOpenSideMenu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">dayForceTests.LoginPageTests#testAccountLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>totallygroupconfig</td><td>Test</td><td>Dayforce2</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">dayForceTests.LoginPageTests#testNavigateToHomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">dayForceTests.timeSchedulesAutomation.TimeScheduleTests#testLoadOrganisation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
