--- a/test-output/extent-report.html
+++ b/test-output/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 30, 2024 02:56:51 am</span></a>
+<a href="#"><span class="badge badge-primary">Nov 30, 2024 09:03:16 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">testAccountLogin</p>
             <p class="text-sm">
-              <span>02:56:52</span> / <span>00:00:05:040</span>
+              <span>21:03:18</span> / <span>00:00:06:585</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testAccountLogin</h5>
-<span class='badge badge-success'>11.30.2024 02:56:52</span>
-<span class='badge badge-danger'>11.30.2024 02:56:57</span>
-<span class='badge badge-default'>00:00:05:040</span>
+<span class='badge badge-success'>11.30.2024 21:03:18</span>
+<span class='badge badge-danger'>11.30.2024 21:03:24</span>
+<span class='badge badge-default'>00:00:06:585</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:56:57</td>
+        <td>21:03:24</td>
         <td>
           Test passed
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">testNavigateToHomePage</p>
             <p class="text-sm">
-              <span>02:56:57</span> / <span>00:00:08:545</span>
+              <span>21:03:24</span> / <span>00:00:09:766</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testNavigateToHomePage</h5>
-<span class='badge badge-success'>11.30.2024 02:56:57</span>
-<span class='badge badge-danger'>11.30.2024 02:57:06</span>
-<span class='badge badge-default'>00:00:08:545</span>
+<span class='badge badge-success'>11.30.2024 21:03:24</span>
+<span class='badge badge-danger'>11.30.2024 21:03:34</span>
+<span class='badge badge-default'>00:00:09:766</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:57:06</td>
+        <td>21:03:34</td>
         <td>
           Test passed
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">testHamburgerToOpenSideMenu</p>
             <p class="text-sm">
-              <span>02:57:06</span> / <span>00:00:00:339</span>
+              <span>21:03:34</span> / <span>00:00:00:228</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testHamburgerToOpenSideMenu</h5>
-<span class='badge badge-success'>11.30.2024 02:57:06</span>
-<span class='badge badge-danger'>11.30.2024 02:57:06</span>
-<span class='badge badge-default'>00:00:00:339</span>
+<span class='badge badge-success'>11.30.2024 21:03:34</span>
+<span class='badge badge-danger'>11.30.2024 21:03:34</span>
+<span class='badge badge-default'>00:00:00:228</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:57:06</td>
+        <td>21:03:34</td>
         <td>
           Test passed
         </td>
@@ -204,7 +204,7 @@
           <div class="test-detail">
             <p class="name">testLoadOrganisation</p>
             <p class="text-sm">
-              <span>02:57:06</span> / <span>00:00:15:148</span>
+              <span>21:03:34</span> / <span>00:00:15:813</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -213,9 +213,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testLoadOrganisation</h5>
-<span class='badge badge-success'>11.30.2024 02:57:06</span>
-<span class='badge badge-danger'>11.30.2024 02:57:22</span>
-<span class='badge badge-default'>00:00:15:148</span>
+<span class='badge badge-success'>11.30.2024 21:03:34</span>
+<span class='badge badge-danger'>11.30.2024 21:03:50</span>
+<span class='badge badge-default'>00:00:15:813</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -228,7 +228,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:57:22</td>
+        <td>21:03:50</td>
         <td>
           Test passed
         </td>
@@ -245,7 +245,7 @@
           <div class="test-detail">
             <p class="name">verifyDayOfWeekMatchesTitle</p>
             <p class="text-sm">
-              <span>02:57:22</span> / <span>00:00:03:172</span>
+              <span>21:03:50</span> / <span>00:00:52:536</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -254,9 +254,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyDayOfWeekMatchesTitle</h5>
-<span class='badge badge-success'>11.30.2024 02:57:22</span>
-<span class='badge badge-danger'>11.30.2024 02:57:25</span>
-<span class='badge badge-default'>00:00:03:172</span>
+<span class='badge badge-success'>11.30.2024 21:03:50</span>
+<span class='badge badge-danger'>11.30.2024 21:04:43</span>
+<span class='badge badge-default'>00:00:52:536</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -269,7 +269,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>02:57:25</td>
+        <td>21:04:43</td>
         <td>
           Test passed
         </td>
@@ -293,13 +293,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 30, 2024 02:56:51 am</h3>
+<h3>Nov 30, 2024 09:03:16 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 30, 2024 02:57:25 am</h3>
+<h3>Nov 30, 2024 09:04:43 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -369,7 +369,7 @@
 </div></div>
 <script>
 var timeline = {
-"testAccountLogin":5.04,"testNavigateToHomePage":8.545,"testHamburgerToOpenSideMenu":0.339,"testLoadOrganisation":15.148,"verifyDayOfWeekMatchesTitle":3.172
+"testAccountLogin":6.585,"testNavigateToHomePage":9.766,"testHamburgerToOpenSideMenu":0.228,"testLoadOrganisation":15.813,"verifyDayOfWeekMatchesTitle":52.536
 };
 </script>
 <div class="row">
