--- a/test-output/index.html
+++ b/test-output/index.html
@@ -141,6 +141,28 @@
           <div class="suite-Command_line_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testLoadOrganisation">
+                  </a> <!-- testLoadOrganisation -->
+                  <span class="method-name">testLoadOrganisation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyDayOfWeekMatchesTitle">
+                  </a> <!-- verifyDayOfWeekMatchesTitle -->
+                  <span class="method-name">verifyDayOfWeekMatchesTitle</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Command_line_suite-class-passed -->
+          <div class="suite-Command_line_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">dayForceTests.LoginPageTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -157,28 +179,6 @@
                   <a name="testNavigateToHomePage">
                   </a> <!-- testNavigateToHomePage -->
                   <span class="method-name">testNavigateToHomePage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Command_line_suite-class-passed -->
-          <div class="suite-Command_line_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testLoadOrganisation">
-                  </a> <!-- testLoadOrganisation -->
-                  <span class="method-name">testLoadOrganisation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyDayOfWeekMatchesTitle">
-                  </a> <!-- verifyDayOfWeekMatchesTitle -->
-                  <span class="method-name">verifyDayOfWeekMatchesTitle</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -253,30 +253,30 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testLoadOrganisation')
+data.setCell(0, 1, 'verifyDayOfWeekMatchesTitle')
 data.setCell(0, 2, 'dayForceTests.timeSchedulesAutomation.TimeScheduleTests')
-data.setCell(0, 3, 15148);
+data.setCell(0, 3, 52537);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testNavigateToHomePage')
-data.setCell(1, 2, 'dayForceTests.LoginPageTests')
-data.setCell(1, 3, 8544);
+data.setCell(1, 1, 'testLoadOrganisation')
+data.setCell(1, 2, 'dayForceTests.timeSchedulesAutomation.TimeScheduleTests')
+data.setCell(1, 3, 15815);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testAccountLogin')
+data.setCell(2, 1, 'testNavigateToHomePage')
 data.setCell(2, 2, 'dayForceTests.LoginPageTests')
-data.setCell(2, 3, 5012);
+data.setCell(2, 3, 9766);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyDayOfWeekMatchesTitle')
-data.setCell(3, 2, 'dayForceTests.timeSchedulesAutomation.TimeScheduleTests')
-data.setCell(3, 3, 3171);
+data.setCell(3, 1, 'testAccountLogin')
+data.setCell(3, 2, 'dayForceTests.LoginPageTests')
+data.setCell(3, 3, 6588);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'testHamburgerToOpenSideMenu')
 data.setCell(4, 2, 'dayForceTests.HomePageTests')
-data.setCell(4, 3, 341);
+data.setCell(4, 3, 229);
 window.suiteTableData['Command_line_suite']= { tableData: data, tableDiv: 'times-div-Command_line_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Command_line_suite">
               </div> <!-- times-div-Command_line_suite -->
             </div> <!-- times-div -->
@@ -323,128 +323,134 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">springTestContextPrepareTestInstance</span>
-                <span class="method-start">19 ms</span>
+                <span class="method-start">4 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.LoginPageTests.testAccountLogin(java.lang.String,java.lang.String,java.lan...)</span>
-                <span class="method-start">5072 ms</span>
+                <span class="method-start">3260 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">5076 ms</span>
+                <span class="method-start">3267 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testAccountLogin(totallygroupconfig, Test, Dayforce2)</span>
-                <span class="method-start">6901 ms</span>
+                <span class="method-start">5101 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.LoginPageTests.testAccountLogin(java.lang.String,java.lang.String,java.lan...)</span>
-                <span class="method-start">11949 ms</span>
+                <span class="method-start">11695 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.LoginPageTests.testNavigateToHomePage())</span>
-                <span class="method-start">11980 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">11994 ms</span>
+                <span class="method-start">11700 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testNavigateToHomePage</span>
-                <span class="method-start">11994 ms</span>
+                <span class="method-start">11701 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setUpOnceForSuite</span>
+                <span class="method-start">11701 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.LoginPageTests.testNavigateToHomePage())</span>
-                <span class="method-start">20539 ms</span>
+                <span class="method-start">21468 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">springTestContextAfterTestClass</span>
-                <span class="method-start">20541 ms</span>
+                <span class="method-start">21470 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">dayForceTests.HomePageTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">springTestContextBeforeTestClass</span>
-                <span class="method-start">20553 ms</span>
+                <span class="method-start">21476 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">springTestContextPrepareTestInstance</span>
-                <span class="method-start">20554 ms</span>
+                <span class="method-start">21477 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.HomePageTests.testHamburgerToOpenSideMenu())</span>
-                <span class="method-start">20569 ms</span>
+                <span class="method-start">21480 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">20575 ms</span>
+                <span class="method-start">21481 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testHamburgerToOpenSideMenu</span>
-                <span class="method-start">20578 ms</span>
+                <span class="method-start">21482 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">springTestContextAfterTestClass</span>
-                <span class="method-start">20920 ms</span>
-              </div> <!-- configuration-class after -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.HomePageTests.testHamburgerToOpenSideMenu())</span>
-                <span class="method-start">20920 ms</span>
+                <span class="method-start">21712 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">springTestContextBeforeTestClass</span>
-                <span class="method-start">20921 ms</span>
+                <span class="method-start">21713 ms</span>
               </div> <!-- configuration-class before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">dayForceTests.HomePageTests</div> <!-- chronological-class-name -->
+              <div class="configuration-class after">
+                <span class="method-name">springTestContextAfterTestClass</span>
+                <span class="method-start">21713 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">dayForceTests.timeSchedulesAutomation.TimeScheduleTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">springTestContextPrepareTestInstance</span>
-                <span class="method-start">20922 ms</span>
+                <span class="method-start">21715 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.testLoadOrganisation() throws ja...)</span>
-                <span class="method-start">20926 ms</span>
+                <span class="method-start">21718 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">20940 ms</span>
+                <span class="method-start">21719 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testLoadOrganisation</span>
-                <span class="method-start">20942 ms</span>
+                <span class="method-start">21721 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.testLoadOrganisation() throws ja...)</span>
-                <span class="method-start">36091 ms</span>
+                <span class="method-start">37537 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.verifyDayOfWeekMatchesTitle())</span>
-                <span class="method-start">36092 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
                 <span class="method-name">setUpOnceForSuite</span>
-                <span class="method-start">36092 ms</span>
+                <span class="method-start">37538 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyDayOfWeekMatchesTitle</span>
-                <span class="method-start">36093 ms</span>
+                <span class="method-start">37538 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">springTestContextBeforeTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.verifyDayOfWeekMatchesTitle())</span>
+                <span class="method-start">37538 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="configuration-method after">
                 <span class="method-name">springTestContextAfterTestMethod(public void dayForceTests.timeSchedulesAutomation.TimeScheduleTests.verifyDayOfWeekMatchesTitle())</span>
-                <span class="method-start">39265 ms</span>
+                <span class="method-start">90075 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">springTestContextAfterTestClass</span>
-                <span class="method-start">39266 ms</span>
+                <span class="method-start">90076 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">dayForceTests.LoginPageTests</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDownAfterSuite</span>
-                <span class="method-start">39730 ms</span>
+                <span class="method-start">90430 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
